--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,13 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    /* ViewPager2 */
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    /* Implementation CircleIndicator3 for ViewPager2 */
+    implementation 'me.relex:circleindicator:2.1.4'
+
 
 }
