--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,10 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        //for edit buildconfig(add server url)
+        buildConfigField "String", "SERVER", "\"https://thustop.com/\""
     }
 
     buildTypes {
@@ -45,6 +47,8 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    /*not null anotation*/
+    implementation 'org.jetbrains:annotations-java5:15.0'
     /* ViewPager2 */
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     /* Implementation CircleIndicator3 for ViewPager2 */
