--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,7 @@ dependencies {
     /*navigation drawer*/
     implementation "androidx.navigation:navigation-fragment:2.2.1"
     implementation "androidx.navigation:navigation-ui:2.2.1"
+
+    /*Google Place API*/
+    implementation 'com.google.android.libraries.places:places:2.3.0'
 }
