--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation files('libs/gitple-android-sdk-v1.1.4.aar')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -84,4 +85,7 @@ dependencies {
 
     /*Google Place API*/
     implementation 'com.google.android.libraries.places:places:2.3.0'
+
+    /*Google Gson for Gitple*/
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
