--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -78,6 +79,8 @@ dependencies {
     annotationProcessor 'org.parceler:parceler:1.1.12'
     /*Firebase for register*/
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-messaging:20.1.5'
+
 
     /*navigation drawer*/
     implementation "androidx.navigation:navigation-fragment:2.2.1"
