--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,4 +100,7 @@ dependencies {
 
     /*Kotlin support from java*/
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.72'
+
+    /*date picker library*/
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
 }
