--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,7 @@ dependencies {
 
     /*date picker library*/
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
+
+    /*Carousel View 동그란 리사이클러*/
+    implementation 'com.gtomato.android.library:carouselview:2.0.1'
 }
