--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,5 @@ dependencies {
     implementation 'com.gtomato.android.library:carouselview:2.0.1'
 
     implementation 'com.github.iamport:iamport-rest-client-java:0.2.13'
+    implementation 'com.github.bootpay:client_android_java:3.3.91'
 }
