--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,5 +107,5 @@ dependencies {
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
 
     implementation 'com.github.iamport:iamport-rest-client-java:0.2.13'
-    implementation 'com.github.bootpay:client_android_java:3.3.91'
+    implementation 'com.github.kenglxn.QRGen:android:2.6.0'
 }
